--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Dogs</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/stylesheets/screen.css">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
-  <app-dog></app-dog>
+  <div class="wrapper">
+    <app-menu></app-menu>
+    <app-root>Loading...</app-root>
+    <app-dog></app-dog>
+    <app-puppydetails></app-puppydetails>
+  </div>
 </body>
+
 </html>
