--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
   <div class="wrapper">
     <app-root>Loading...</app-root>
     <app-menu></app-menu>
-    
+
   </div>
+  <app-footer></app-footer>
 </body>
 
 </html>
